   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.43
 ============

 Released on 

 New features and improvements:

   - Reconciliation: let the user select displayed columns (todo #887).
   - Settlement: let the user select displayed columns.

 Bug fixes:

   - GuidedInput: fix the width of entries (todo #868).

 Other changes:

   - mySettings: new class.
   - ofa-entry-columns.{c,h}: removed obsolete files.
   - ofa-reconcil-columns.{c,h}: removed obsolete files.
   - ofaIColumns: removed obsolete interface.
   - ofaITreeviewColumn: new interface.
   - ofaITreeviewDisplay: new interface.
   - ofaReconciliation class is renamed to ofaReconcilPage.

-----------------------------------------------------------------------
 Version 0.42
 ============

 Released on 2015-11-12

 New features and improvements:

   - 'install-txz' target let the user build a locally installable tarball.

-----------------------------------------------------------------------
 Version 0.41
 ============

 Released on 2015-11-11

 New features and improvements:

   - Reconciliation: update buttons after actions are done (todo #883).
   - Reconciliation: display bat lines reconciliation date and identifier.
   - Reconciliation: review display on conciliation groups (todo #877).
   - ViewEntries: ask for a confirmation when deleting a settled
                  or conciliated entry (todo #875).

 Bug fixes:

   - GuidedInput: review the layout of the UI (todo #882).
   - Reconciliation: fix missing leading space (todo #881).
   - Reconciliation: fix rounding computation (todo #876).
   - Reconciliation: fix account label style (todo #871).
   - ReconciliationSummary: reset drawing area when changing account (todo #872).
   - ViewEntries: update reconciliation date (todo #874).

 Other changes:

   - my_utils_entry_get_valid(), my_utils_entry_set_valid(): removed functions.
   - my_utils_widget_remove_style(): new function.